Arreglo errores en el codigo